# YSLibs

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Practice.vcxproj  Practice.vcxproj.filters  README.md  VERSION  YSLibs.sln  YSLibs.vcxproj  YSLibs.vcxproj.filters  clang-format  main.c  main.h
.cmake/: CMakePresets-build.json  CMakePresets-configure.json
.cmake/presets/base/: BuildPresets.json  ConfigurePresets.json  TestPresets.json
.cmake/presets/linux/: CMakePresets.json
.cmake/presets/macos/: CMakePresets.json
.cmake/presets/windows/: CMakePresets.json
.template/: array_legacy.dox  collections.csv  collections.ods  doxygen_doc.txt  json.c
RPC/: README.md  test.rpc
RPC/inc/RPC/core/: core.h  method.h  param.h  type.h
RPC/src/core/: type.c
algorithm/: CMakeLists.txt  algorithm.h  comparator.c  comparator.h  export.def  random.c  random.h  search.c  search.h  sort.c  sort.h  swap.c  swap.h  types.h
algorithm/inc/algorithm/: algorithm.h  comparator.h  memory.h  random.h  reverse.h  search.h  sort.h  swap.h
algorithm/inc/declarator/: comparator.h  swap.h
algorithm/src/: memory.c  random.c  reverse.c  search.c  sort.c  swap.c
collection/: CMakeLists.txt  array.c  array.h  collection.md  collection.txt  collections.h  general.c  general.h  hashtable.h  iterator.c  iterator.h  matrix.h  private.c  private.h  stack.h  string.c  string.h  type.h  vector.h
collection/array/: array.c  array.h
collection/hashtable/: hashtable.c  hashtable.h
collection/inc/collection/: array.h  btree.h  collections.h  for.h  general.h  generic.h  hashtable.h  iterator.h  map.h  string.h  tree.h  tuple.h  variant.h
collection/iterator/: iterator.c  iterator.h
collection/ottable/: ottable.c  ottable.h
collection/private/: CMakeLists.txt  ottable.c  ottable.h
collection/private/inc/collection/: general.h  private.h
collection/private/src/: general.c  private.c
collection/src/: array.c  btree.c  hashtable.c  iterator.c  map.c  private.c  private.h  string.c  tree.c  variant.c
collection/string/: string.h
core/: CMakeLists.txt  core.h  debug.h  metrics.c  metrics.h  types.h  varidatic.h
core/inc/core/: core.h  debug.h
core/macro/: arg.h  each.h  exec.h  foreach.h  macro.h  reverse.h  sequence.h  variadic.h  varidatic.h
core/macro/generic/: print.h
core/type/: tuple.h  variant.h
macro/: CMakeLists.txt
macro/inc/macro/: arg.h  core.h  dec.h  exec.h  expect.h  foreach.h  inc.h  logic.h  macro.h  reverse.h  runtime.h  sequence.h  variadic.h
macro/inc/macro/generic/: print.h  type.h
macro/prv/macro/: inc_dec_printer.h  private_exec.h  private_reverse.h  private_sequence.h  private_variadic.h
task1/: CMakeLists.txt  task1.c  task1.h
task1/src/: task1.c
task2/: CMakeLists.txt  task2.c  task2.h
task2/src/: task2.c
task3/: CMakeLists.txt  task3.c  task3.h
task3/src/: task3.c
template/: .~lock.collections.csv#  doxygen_doc.txt
test/: CMakeLists.txt
test/collection/: CMakeLists.txt  arr_ctor.c
test/core/: CMakeLists.txt  core.c  debug.c  main.c
test/inc/: test.h
test/macro/: CMakeLists.txt  arg.c
type/: tuple.h
util/: CMakeLists.txt
util/inc/util/: console.h  fun.h  log.h  menum.h  metrics.h  timer.h  version.h
util/src/: console.c  fun.c  log.c  timer.c  version.c
utils/: console.c  console.h  random.c  random.h  timer.c  timer.h  utils.c  utils.h
